Added header/navbar. Only took 3 hours. Will aim for 2.5 hours next time!

--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special+Elite|Oswald">
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/styles.css">
   <title>One Page Design</title>
 </head>
 <body>
-  
+  <!-- Header -->
+  <div id="header">
+    <h1><a href="#">Primal Coffee</a></h1>
+    <nav>
+      <ul>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Home</a></li>
+      </ul>
+    </nav>
+  </div>
+  <!-- Main Content -->
+<div id="content">
+  <p>Test</p>
+</div>
+
 </body>
 </html>
