Added background image and section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     </nav>
   </div>
   <!-- Main Content -->
-<div id="content">
-  <p>Test</p>
+<div class="section">
+  <h1 id="since-2018">Making Great Coffee Since 2018<h1>
 </div>
-
 </body>
 </html>
