--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <!-- Contact Form -->
   <div class="container" id="contact">
     <h2>Contact Form</h2>
+    <p>Let us know how we're doing!</p>
     <form action="/action_page.php">
       <label for="fname">First Name</label>
       <input type="text" id="fname" name="firstname" placeholder="Your name..">
